Update to more recent version of powermock, mockito and jUnit4